# Dashboard3

./: CMakeLists.txt  README_ESP32_Dashboard.md  activate_esp_idf.bat  monitor.py  sdkconfig
components/ecu_s3_components/: CMakeLists.txt  ecu_data.h  ui_dashboard.c  ui_dashboard.h
components/espressif__esp_lcd_touch/: CMakeLists.txt  display.h  esp_lcd_touch.c
components/sd_card_manager/: CMakeLists.txt  idf_component.yml  sd_card_manager.c
components/sd_card_manager/include/: sd_card_manager.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  background_task.c  background_task.h  can_parser.c  can_websocket.c  canbus.c  ecu_data.c  idf_component.yml  main.c  mre_parser.c  serial_reader.c  web_server.c  wifi_server.c
main/include/: can_parser.h  can_websocket.h  canbus.h  ecu_data.h  mre_data.h  mre_parser.h  serial_reader.h  web_server.h  wifi_server.h
main/ui/: CMakeLists.txt  settings_config.c  settings_config.h  ui.c  ui.h  ui_helpers.c  ui_helpers.h  ui_screen_manager.c  ui_screen_manager.h  ui_updates.c  ui_updates.h
main/ui dashboard/: ui_helpers.c
main/ui dashboard/screens/: ui_Screen1.c
main/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h  ui_Screen5.c  ui_Screen5.h  ui_Screen6.c  ui_Screen6.h
